--- a/calico-enterprise/getting-started/install-on-clusters/windows-calico/limitations.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/windows-calico/limitations.mdx
@@ -4,22 +4,21 @@ description: Review limitations before starting installation.
 
 # Limitations and known issues
 
-## Unsupported features
+## {{prodnameWindows}} feature limitations
 
 | Feature                        | Unsupported in this release                                                                                                                                                                                                                              |
 | ------------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | Platforms                      | - TKG<br />- GKE                                                                                                                                                                                                                                         |
-| Install and upgrade            | - Operator install<br />- Non-cluster hosts<br />- Typha component for scaling (Linux-based feature)                                                                                                                                                     |
+| Install and upgrade            | - Non-cluster hosts<br />- Typha component for scaling (Linux-based feature)                                                                                                                                                     |
 | Networking                     | - Overlay mode with BGP peering<br />- IP in IP overlay with BGP routing<br />- Cross-subnet support and MTU setting for VXLAN<br />- IPv6 and dual stack<br />- Dual-ToR<br />- Service advertisement<br />- Multiple networks to pods                  |
 | Policy                         | - Staged network-policy<br />- Firewall integrations<br />- Policy for hosts (host endpoints, including automatic host endpoints)<br />- Tiered policy: TKG, GKE, AKS<br />- WAF integration<br />- AWS firewall integration<br />- Fortinet integration |
 | Visibility and troubleshooting | - Packet capture<br />- DNS logs<br />- iptable logs<br />- L7 logs                                                                                                                                                                                      |
 | Threat defense                 | - Honeypods<br />- DPI<br />- Performance hotspots<br />- WAF                                                                                                                                                                                                       |
 | Multi-cluster management       | - Multi-cluster management federated identity endpoints and services<br />- Federated endpoint identity and services                                                                                                                                     |
 | Compliance and security        | - CIS benchmark and other reports<br />- Wireguard encryption for pod-to-pod traffic and host-to-host traffic                                                                                                                                            |
-| Monitoring                     | - Prometheus monitoring                                                                                                                                                                                                                                  |
 | Dataplane                      | - eBPF is a Linux-based feature                                                                                                                                                                                                                          |
 
-## BGP networking limitations
+## {{prodname}} BGP networking limitations
 
 If you are using {{prodname}} with BGP, note these current limitations with Windows.
 
@@ -206,5 +205,4 @@ DNS Policy is a tech preview feature. Tech preview features may be subject to si
 
 ## Next steps
 
-- [Quickstart](quickstart.mdx)
-- [Standard install](kubernetes/standard.mdx)
+- [Install {{prodnameWindows}} using operator](operator.mdx)
