--- a/calico-enterprise/getting-started/install-on-clusters/windows-calico/manual-install/kubeconfig.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/windows-calico/manual-install/kubeconfig.mdx
@@ -1,8 +1,14 @@
 ---
-description: Configure kubeconfig for Calico Enterprise for Windows.
+description: Configure kubeconfig for the manual install of Calico Enterprise for Windows.
 ---
 
-# Create kubeconfig for Windows nodes
+# Create kubeconfig for manually installed Calico for Windows nodes
+
+:::note
+
+The manual method for installing {{prodnameWindows}} is deprecated in favor of using [the Operator and Windows HostProcess containers (HPC)](../operator.mdx#install-{{prodnamedashWindows}}-using-the-operator). Support for this method will be dropped in a future {{prodname}} version.
+
+:::
 
 ## Big picture
 
