--- a/calico-enterprise/getting-started/install-on-clusters/windows-calico/manual-install/maintain.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/windows-calico/manual-install/maintain.mdx
@@ -1,8 +1,14 @@
 ---
-description: Tasks to manage Calico services and uninstall Calico Enterprise for Windows.
+description: Tasks to manage Calico services and uninstall Calico Enterprise for Windows when the manual install (non-HPC) method was used.
 ---
 
-# Start and stop Calico Enterprise for Windows services
+# Manage and maintain manually installed Calico Enterprise for Windows services
+
+:::note
+
+The manual method for installing {{prodnameWindows}} is deprecated in favor of using [the Operator and Windows HostProcess containers (HPC)](../operator.mdx#install-{{prodnamedashWindows}}-using-the-operator). Support for this method will be dropped in a future {{prodname}} version.
+
+:::
 
 ## Big picture
 
@@ -24,7 +30,7 @@ To change the parameters defined in `config.ps1`:
 - Modify the configuration
 - Run `install-calico.ps1`to reinstall {{prodnameWindows}}.
 
-Because `config.ps1` is imported by the various component startup scripts, additional environment variables can be added, as documented in the [{{prodname}} reference guide](../../../reference/index.mdx).
+Because `config.ps1` is imported by the various component startup scripts, additional environment variables can be added, as documented in the [{{prodname}} reference guide](../../../../reference/index.mdx).
 
 ### Update service wrapper configuration
 
