--- a/calico-enterprise/getting-started/install-on-clusters/windows-calico/manual-install/openshift-installation.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/windows-calico/manual-install/openshift-installation.mdx
@@ -2,11 +2,17 @@
 description: Install Calico Enterprise on an OpenShift 4 cluster on Windows nodes
 ---
 
-# Install an OpenShift 4 cluster on Windows nodes
+# Calico Enterprise for Windows on an OpenShift 4 cluster (manual install)
+
+:::note
+
+The manual method for installing {{prodnameWindows}} is deprecated in favor of using [the Operator and Windows HostProcess containers (HPC)](../operator.mdx#install-{{prodnamedashWindows}}-using-the-operator). Support for this method will be dropped in a future {{prodname}} version.
+
+:::
 
 ## Big picture
 
-Install an OpenShift 4 cluster on AWS with {{prodname}} on Windows nodes.
+Install an OpenShift 4 cluster on AWS with {{prodname}} on Windows nodes using the manual installation method.
 
 Augments the applicable steps in the [OpenShift documentation](https://cloud.redhat.com/openshift/install) to install {{prodnameWindows}}.
 
@@ -39,10 +45,10 @@ Augments the applicable steps in the [OpenShift documentation](https://cloud.red
 
 **Recommended**
 
-- [Configure access to {{prodname}} Manager UI](../../../operations/cnx/access-the-manager.mdx)
-- [Authentication quickstart](../../../operations/cnx/authentication-quickstart.mdx)
-- [Configure your own identity provider](../../../operations/cnx/configure-identity-provider.mdx)
+- [Configure access to {{prodname}} Manager UI](../../../../operations/cnx/access-the-manager.mdx)
+- [Authentication quickstart](../../../../operations/cnx/authentication-quickstart.mdx)
+- [Configure your own identity provider](../../../../operations/cnx/configure-identity-provider.mdx)
 
 **Recommended - Security**
 
-- [Get started with {{prodname}} tiered network policy](../../../network-policy/policy-tiers/tiered-policy.mdx)
+- [Get started with {{prodname}} tiered network policy](../../../../network-policy/policy-tiers/tiered-policy.mdx)
