--- a/calico-enterprise/getting-started/install-on-clusters/windows-calico/operator.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/windows-calico/operator.mdx
@@ -1,5 +1,5 @@
 ---
-description: Install Calico for Windows on a Kubernetes cluster for testing or development.
+description: Install Calico Enterprise for Windows on a Kubernetes cluster for testing or development.
 ---
 
 # Install using Operator
@@ -34,12 +34,6 @@ This is required to prevent Linux nodes from borrowing IP addresses from Windows
 ```bash
 kubectl patch ipamconfigurations default --type merge --patch='{"spec": {"strictAffinity": true}}'
 ```
-
-:::note
-
-If the above command failed to find ipamconfigurations resource, you need to install the Calico API server. Please refer to [installing the Calico API server](../../../operations/install-apiserver.mdx).
-
-:::
 
 ### Install {{prodnameWindows}} using the operator
 
@@ -95,7 +89,7 @@ c:\k\kubeadm.exe join 172.16.101.139:6443 --token v8w2jt.jmc45acn85dbll1e --disc
 
 #### Migrate from {{prodnameWindows}} manual installation to operator installation
 
-The HPC installation in this guide is operator-based and will automatically migrate your Windows nodes that have {{prodnameWindows}} installed using the manual installation method. This installation process will uninstall any existing {{prodnameWindows}} services and overwrite the {{prodnameWindows}} installation files with those included in the `calico/cni-windows` and `calico/node-windows` images. If `kubelet` was installed using `{{rootDirWindows}}\kubernetes\install-kube-services.ps1`, this service will remain installed. If the `kube-proxy` service was also installed using `{{rootDirWindows}}\kubernetes\install-kube-services.ps1`, it will be stopped and uninstalled by the `calico-node-windows` HPC initContainers. It is recommended to run `kube-proxy-windows` as hostprocess container images using the [manifest provided in the kubernetes-sigs sig-windows-tools repository](https://raw.githubusercontent.com/kubernetes-sigs/sig-windows-tools/master/hostprocess/calico/kube-proxy/kube-proxy.yml).
+The HPC installation in this guide is operator-based and will automatically migrate your Windows nodes that have {{prodnameWindows}} installed using the manual installation method. This installation process will uninstall any existing {{prodnameWindows}} services and overwrite the {{prodnameWindows}} installation files with those included in the `tigera/cni-windows` and `tigera/cnx-node-windows` images. If `kubelet` was installed using `{{rootDirWindows}}\kubernetes\install-kube-services.ps1`, this service will remain installed. If the `kube-proxy` service was also installed using `{{rootDirWindows}}\kubernetes\install-kube-services.ps1`, it will be stopped and uninstalled by the `calico-node-windows` HPC initContainers. It is recommended to run `kube-proxy-windows` as hostprocess container images using the [manifest provided in the kubernetes-sigs sig-windows-tools repository](https://raw.githubusercontent.com/kubernetes-sigs/sig-windows-tools/master/hostprocess/calico/kube-proxy/kube-proxy.yml).
 
 :::note
 
