--- a/calico-enterprise/getting-started/install-on-clusters/windows-calico/rancher.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/windows-calico/rancher.mdx
@@ -17,7 +17,7 @@ Install {{prodnameWindows}} on Rancher Kubernetes Engine (RKE).
 
 **Required**
 
-- A [compatible RKE cluster](../../../compatibility.mdx#rke)
+- A [compatible RKE cluster](../../compatibility.mdx#rke)
 
 - An RKE cluster provisioned with [no network plugin](https://rancher.com/docs/rke/latest/en/config-options/add-ons/network-plugins#disabling-deployment-of-a-network-plug-in)
 
@@ -33,7 +33,7 @@ The following steps will outline the installation of {{prodname}} networking on 
    kubectl create -f {{filesUrl}}/manifests/tigera-operator.yaml
    ```
 
-1. Download the necessary Installation custom resource.
+1. Download the necessary Installation custom resources.
 
    ```bash
    wget {{filesUrl}}/manifests/custom-resources.yaml
@@ -83,7 +83,7 @@ The following steps will outline the installation of {{prodname}} networking on 
 
    :::note
 
-   For more information on configuration options available in this manifest, see [the installation reference](../../../../reference/installation/api.mdx).
+   For more information on configuration options available in this manifest, see [the installation reference](../../../reference/installation/api.mdx).
 
    :::
 
@@ -99,7 +99,8 @@ The following steps will outline the installation of {{prodname}} networking on 
    kubectl patch ipamconfigurations default --type merge --patch='{"spec": {"strictAffinity": true}}'
    ```
 
-1. Finally, follow the {{prodnameWindows}} [quickstart guide for Kubernetes](../quickstart.mdx#install-calico-enterprise-for-windows-manually)
+1. Finally, install {{prodnameWindows}}. For an operator installation, follow the [operator guide](operator.mdx).
+   For manual installation, follow the [quickstart guide](manual-install/quickstart.mdx#install-calico-for-windows-manually).
    For VXLAN clusters, follow the instructions under the "Kubernetes VXLAN" tab. For BGP clusters, follow the instructions under the "Kubernetes BGP" tab.
 
    :::note
@@ -112,5 +113,5 @@ The following steps will outline the installation of {{prodname}} networking on 
 
 ## Next steps
 
-- [Try the basic policy demo](../demo.mdx)
-- [Secure pods with {{prodname}} network policy](../../../../network-policy/beginners/calico-network-policy.mdx)
+- [Try the basic policy demo](demo.mdx)
+- [Secure pods with {{prodname}} network policy](../../../network-policy/beginners/calico-network-policy.mdx)
