--- a/calico-enterprise/operations/monitor/metrics/bgp-metrics.mdx
+++ b/calico-enterprise/operations/monitor/metrics/bgp-metrics.mdx
@@ -142,6 +142,16 @@ irate(bgp_route_updates_received{instance="calico-node-1",ip_version="IPv4"}[5m]
 irate(bgp_route_updates_received{ip_version="IPv4"}[5m])
 ```
 
+### BGP metrics on {{prodnameWindows}}
+
+By default, the Windows firewall blocks listening on ports. For {{prodname}} to manage the Prometheus metrics ports Windows firewall rules, enable the `windowsManageFirewallRules` setting in FelixConfiguration:
+
+```bash
+kubectl patch felixConfiguration default --type merge --patch '{"spec":{"windowsManageFirewallRules": "Enabled"}}'
+```
+
+[See the FelixConfiguration reference for more details](../../../reference/resources/felixconfig.mdx). You can also add a Windows firewall rule that allows listening on the Prometheus BGP metrics port instead of having {{prodname}} manage it.
+
 ## Additional resources
 
 - [Secure {{prodname}} Prometheus endpoints](../../comms/secure-metrics.mdx)
