--- a/calico/operations/monitor/monitor-component-metrics.mdx
+++ b/calico/operations/monitor/monitor-component-metrics.mdx
@@ -160,13 +160,13 @@ spec:
 EOF
 ```
 
-By default, the Windows firewall blocks listening on ports. To have {{prodname}} manage the Prometheus metrics ports Windows firewall rules, enabled the `windowsManageFirewallRules` setting in FelixConfiguration:
+By default, the Windows firewall blocks listening on ports. For {{prodname}} to manage the Prometheus metrics ports Windows firewall rules, enable the `windowsManageFirewallRules` setting in FelixConfiguration:
 
 ```bash
-kubectl patch felixConfiguration default --type merge --patch '{"spec":{"windowsManageFirewallRules": Enabled}}'
+kubectl patch felixConfiguration default --type merge --patch '{"spec":{"windowsManageFirewallRules": "Enabled"}}'
 ```
 
-[See here for more details](../../reference/resources/felixconfig.mdx). You can also add a Windows firewall rule allowing listening on the Prometheus metrics port instead of having {{prodname}} manage it.
+[See the FelixConfiguration reference for more details](../../reference/resources/felixconfig.mdx). You can also add a Windows firewall rule that allows listening on the Prometheus metrics port instead of having {{prodname}} manage it.
 
 </TabItem>
 <TabItem label="Manifest" value="Manifest-5">
