--- a/calico-enterprise/getting-started/install-on-clusters/windows-calico/demo.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/windows-calico/demo.mdx
@@ -11,8 +11,8 @@ This guide provides a simple demo to illustrate basic pod-to-pod connectivity an
 
 ## Prerequisites
 
-To run this demo, you will need a [{{prodnameWindows}} cluster](quickstart.mdx) with
-Windows Server 1809 (build 17763.1432 August 2020 update or newer). More recent versions of Windows Server can be used with a change to the demo manifests.
+To run this demo, you will need a [{{prodnameWindows}} cluster](operator.mdx) with
+Windows Server 1809 (build 17763.1432 August 2020 update or newer). More recent versions of Windows Server can be used with a change to the demo manifests, namely the version tags of the Windows images, e.g.: `servercore:ltsc2022` instead of `servercore:1809`.
 
 :::note
 
@@ -129,7 +129,7 @@ spec:
     - containerPort: 80
     env:
     - name: SERVE_PORT_80
-      value: This is a Calico Enterprise for Windows demo.
+      value: This is a {{prodnameWindows}} demo.
     imagePullPolicy: IfNotPresent
   nodeSelector:
     kubernetes.io/os: windows
@@ -200,13 +200,13 @@ If that succeeds, we will see something like:
 ```
 StatusCode        : 200
 StatusDescription : OK
-Content           : This is a Calico Enterprise for Windows demo.
+Content           : This is a {{prodnameWindows}} demo.
 RawContent        : HTTP/1.1 200 OK
                     Content-Length: 49
                     Content-Type: text/plain; charset=utf-8
                     Date: Fri, 21 Aug 2020 22:45:46 GMT
 
-                    This is a Calico Enterprise for Windows demo.
+                    This is a {{prodnameWindows}} demo.
 Forms             :
 Headers           : {[Content-Length, 49], [Content-Type, text/plain;
                     charset=utf-8], [Date, Fri, 21 Aug 2020 22:45:46 GMT]}
@@ -399,7 +399,7 @@ spec:
         - containerPort: 80
       env:
         - name: SERVE_PORT_80
-          value: This is a Calico Enterprise for Windows demo.
+          value: This is a {{prodnameWindows}} demo.
       imagePullPolicy: IfNotPresent
   nodeSelector:
     kubernetes.io/os: windows
