--- a/calico-enterprise_versioned_docs/version-3.15/operations/monitor/prometheus/byo-prometheus.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/operations/monitor/prometheus/byo-prometheus.mdx
@@ -338,7 +338,7 @@ The .yamls have no namespace defined so when you apply `kubectl`, it is applied 
 
    ```bash
    $:tls_key=<tls.key content>
-   $:echo $tsls_key|base64 -d >key.pem
+   $:echo $tls_key|base64 -d >key.pem
 
    $:tls_cert=<tls.crt content>
    $:echo $cert|base64 -d>cert.pem
